# basic-game-of-life

./: CMakeLists.txt  CMakeLists.txt.in  LifeSimulator.cpp  LifeSimulator.hpp  PatternBlinker.hpp  README.txt  Renderer.hpp  RendererConsole.cpp  RendererConsole.hpp  _clang-format  main.cpp  rlutil.h  run_linux_version.sh
src/: PatternAcorn.cpp  PatternBlinker.cpp  PatternBlock.cpp  PatternBlock.hpp  PatternGlider.cpp  PatternGosperGliderGun.cpp  PatternGosperGliderGun.hpp  TestGameOfLife.cpp
src/include/: Pattern.hpp  PatternAcorn.hpp  PatternGlider.hpp
